partup-tile: fix tags z-index

--- a/app/client/stylesheets/components/pu-partuptile.sass
+++ b/app/client/stylesheets/components/pu-partuptile.sass
@@ -35,7 +35,7 @@
         left: 100%
         padding: 0
         list-style: none
-        z-index: 1
+        z-index: 4
         pointer-events: none
 
         li
